# ResearchMastersClients

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  _geo_check.sql  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: bootstrap_schema.py  docker-entrypoint.sh  main.py  mock_web_pay.py
backend/src/backend/alembic/: env.py
backend/src/backend/core/: access.py  auth.py  config.py  database.py  email_verification.py  env_loader.py  error_responses.py  logging_setup.py  models_loader.py  public_reads.py  rate_limit.py  security.py  storage.py  tokens.py  upload_validation.py  uptime_alerts.py
backend/src/backend/cruds/: contracts_crud.py  conversations_crud.py  geography_crud.py  notifications_crud.py  payments_crud.py  users_crud.py  works_materials_crud.py
backend/src/backend/models/: contracts_models.py  conversations_models.py  currency_models.py  estimate_graphic_works_models.py  geography_models.py  orders_models.py  payments_models.py  prices_works_materials.py  users_models.py  works_materials_models.py
backend/src/backend/payments/: constants.py
backend/src/backend/routers/: contracts_router.py  conversations_router.py  currency_router.py  estimate_graphic_works_router.py  geography_router.py  notifications_router.py  payments_router.py  users_router.py  (+1 more)
backend/tests/: conftest.py  test_access.py  test_config_db.py  test_error_responses.py  test_health.py  test_logging_setup.py  test_rate_limit.py  test_security.py  test_storage.py  test_tokens.py
deploy/: DEPLOY.md
(+349 files in other folders)
