[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MukhaAlleksius",email = "mukha.alleksius@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bcrypt (==4.0.1)",
    "passlib (>=1.7.4,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "google-auth",
    "requests",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-jose[pycryptodome] (>=3.5.0,<4.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "certifi (>=2025.1.31,<2026.0)",
    "truststore (>=0.10.0,<0.11.0)"
]
[tool.pytest.ini_options]
pythonpath = ["src/backend"]
testpaths = ["tests"]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
